<resources>
    <string name="app_name">Trending</string>
    <string name="app_info">See what the GitHub community is most excited about today.</string>

    <string name="menu_theme">Theme</string>
    <string name="menu_language">Language</string>
    <string name="menu_about">About</string>
    <string name="menu_add">Add</string>
    <string name="menu_repos">Repository</string>
    <string name="menu_developer">Developer</string>

    <string name="theme_default">Default</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_indigo">Indigo</string>
    <string name="theme_green">Green</string>
    <string name="theme_red">Red</string>
    <string name="theme_blue_grey">BlueGrey</string>
    <string name="theme_black">Black</string>
    <string name="theme_purple">Purple</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_pink">Pink</string>

    <string name="delete_language">Delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="size_up_one">Size must greater than one</string>
    <string name="search_info">Input Language...</string>
    <string name="size_down_ten">Up to 10 can be selected</string>

    <string name="open">open</string>
    <string name="close">close</string>
</resources>
